src/test/resources/type/good/if-else-1.ml
int x = 2
if(x == 2) {
    x += 2;
} else {
    x -= 1;
}