src/test/resources/type/bad/if-1.ml
int x = 2;
if(3 > 2) x++;